# karma

./: LICENSE  README.md  karma_app.py  pyproject.toml
karma/: affix_list.py  encode_decode.py  ending_list.py  morphemes.txt  structures.py  utils.py  word_base.py
templates/: index.html
