[build-system]
requires = ["setuptools>=61.0", "wheel", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "karma"
version = "0.0.1"
description = "An experimental Kalaallisut Rule-based Morphological Analyzer."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "alexhsu" }]
dependencies = []
classifiers = [
    "Programming Language :: Python :: 3",
    # "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.setuptools]
packages = ["karma"]

[tool.setuptools.package-data]
karma = ["morpheme.txt"]
